--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,17 +16,20 @@
         android:theme="@style/Theme.Movies"
         tools:targetApi="31">
         <activity
+            android:name=".ui.Main.MainActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.FavouriteActivity.FavouriteActivity"
             android:exported="false" />
         <activity
             android:name=".ui.DetailActivity.MovieDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.Main.MainActivity"
+            android:name=".ui.Splash.SplashActivity"
+            android:theme="@style/SplashTheme"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
